--- a/01 - Requests library.ipynb
+++ b/01 - Requests library.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Python Requests Tutorial: 25min from YT (Corey Schafer)</h3>"
+    "<h3>Python Requests Tutorial: 25min from YouTube (Corey Schafer)</h3>"
    ]
   },
   {
