--- a/02 - BeautifulSoup library.ipynb
+++ b/02 - BeautifulSoup library.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3> Webscraping : BeautifulSoup tutorial (30min from freeCodeCamp)</h3>"
+    "<h3> Webscraping BeautifulSoup tutorial: 30min from YouTube (freeCodeCamp)</h3>"
    ]
   },
   {
